[gd_scene load_steps=4 format=3 uid="uid://ct4ostywuey2x"]

[ext_resource type="Script" path="res://scenes/Dungeon/exit.gd" id="1_t78j8"]
[ext_resource type="Texture2D" uid="uid://baq0vi62wlxm3" path="res://assets/Graficos/Items/ladder.png" id="2_ebmdj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtnps"]
size = Vector2(16, 18)

[node name="Exit" type="Node2D"]
script = ExtResource("1_t78j8")

[node name="StairDown" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2(8, 8)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ebmdj")

[node name="StairBlocked" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
light_mask = 0
position = Vector2(8, 8)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ebmdj")

[node name="Area2D" type="Area2D" parent="."]
disable_mode = 2
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 11)
shape = SubResource("RectangleShape2D_gtnps")

[node name="RespawnRight" type="Node2D" parent="."]
position = Vector2(57, 10)

[node name="RespawnTop" type="Node2D" parent="."]
position = Vector2(8, -34)

[node name="RespawnLeft" type="Node2D" parent="."]
position = Vector2(-43, 6)

[node name="RespawnBottom" type="Node2D" parent="."]
position = Vector2(9, 53)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
